# svs-pubsub-eval

./: 3npp.conf  5npp.conf  README.md  dtn7-go.patch  eval_wifi.py  pubsub-eval-scenario.py  results.ipynb
svs-client/: .gitignore  CMakeLists.txt  README.md  svs-client.cpp  svs-patch.patch
svs-client/src/: AbstractProgram.cpp  AbstractProgram.h  iblt.h  log.hpp  svs-client.cpp  svs-uav.cpp  syncps-client.cpp  syncps-uav.cpp  syncps.h
svs-client/test/: IBFTest.cpp
